# useful-scripts

./: .gitmodules  LICENSE  README.md
cmake/: basics.md  readme.md
cmake/sample_complex/: CMakeLists.txt
cmake/sample_complex/src/: CMakeLists.txt
cmake/sample_complex/src/lib1/: CMakeLists.txt
cmake/sample_complex/src/lib2/: CMakeLists.txt
cmake/sample_flat/: CMakeLists.txt
cmake/sample_only_src/: CMakeLists.txt
customtkinter/: readme.md
frp/: frps.service  frps.toml  setup.sh
linux/: basics.md  readme.md
minecraft/: .env  README.md  docker-compose-raw.yml  dockerfile-daemon-jdk11  dockerfile-daemon-jdk17  dockerfile-daemon-jdk21  dockerfile-web
powershell/: .gitignore  gEnvCtrl.ps1  readme.md
powershell/doc/: _zhihu_upload_order.md  basic.md  environment.md  json.md
python/: pyperclip试水.py  readme.md  redis试水.ipynb  试水easyOCR.py  试水loguru.py  试水vidgear.py
python/UI/: customtkinter.md  试水dearpygui.py  试水kivy.py  试水toga.py
python/UI/flet/: readme.md
python/UI/pyautogui/: pyautogui试水.md  pyautogui试水2.py
python/dotenv/: dotenv试水.py  readme.md  temp_env
python/premitive/: functools试水.py  logging试水.py
python/scikit-image/: 试水scikit-image.py
